fix: добавить wrap

--- a/blocks/welcome/welcome.css
+++ b/blocks/welcome/welcome.css
@@ -1,5 +1,6 @@
 .welcome {
     margin-right: 0;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
